Develop (#8)
* Feature/setup 404 and folder specific pages (#1)

* [feature/Setup-404-and-folder-specific-pages]-code changed

* [feature/add-inventory-related-entities]-added (#2)

* Feature/add role based navigation (#3)

* [feature/add-role-based-navigation]-added

* [feature/add-role-based-navigation]-added profile pages

* [feature/add-role-based-navigation]-added profile pages

* Feature/product module (#4)

* [feature/product-module]-added product category module

* [feature/product-module]-added product category module

* Feature/product module (#5)

* [feature/product-module]-added product category module, moved pages to product-category folder, product category parent id is set

* Feature/product module (#6)

* [feature/product-module]-added product category module

* [feature/product-module]-moved pages to product-category folder

* [feature/product-module]-product category parent id is set

* [feature/product-module]-product and category completed

* [feature/purchase-order]-completed purchase order list and drafting, placing and receiving (#7)