@@ -1,7 +1,8 @@
 package com.niranzan.inventory.management.service;
 
-import com.niranzan.inventory.management.entity.Role;
-import com.niranzan.inventory.management.entity.User;
+import com.niranzan.inventory.management.dto.CustomUserDetail;
+import com.niranzan.inventory.management.entity.UserProfile;
+import com.niranzan.inventory.management.entity.UserRole;
 import com.niranzan.inventory.management.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
@@ -12,30 +13,28 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
-
-    private final UserRepository userRepository;
+    private final UserRepository UserRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(email);
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        UserProfile userProfile = UserRepository.findByUsername(username);
 
-        if (user != null) {
-            return new org.springframework.security.core.userdetails.User(user.getEmail(),
-                    user.getPassword(),
-                    mapRolesToAuthorities(user.getRoles()));
+        if (userProfile != null) {
+            Collection<? extends GrantedAuthority> authorities = mapRolesToAuthorities(Collections.singleton(userProfile.getUserRole()));
+            return new CustomUserDetail(userProfile, authorities);
         } else {
             throw new UsernameNotFoundException("Invalid username or password.");
         }
     }
 
-    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
-        return roles.stream()
-                .map(role -> new SimpleGrantedAuthority(role.getName()))
-                .collect(Collectors.toList());
+    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<UserRole> userRoles) {
+        return userRoles.stream()
+                .map(role -> new SimpleGrantedAuthority(role.getRoleName()))
+                .toList();
     }
 }
